--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mrdebug/crudgen",
+    "name": "mikhsanw/gen-crud",
     "description": "Create a Laravel Crud in a few seconds",
     "license": "MIT",
     "keywords": [
